--- a/langs/en_US/cloudbackup.lang
+++ b/langs/en_US/cloudbackup.lang
@@ -23,3 +23,14 @@ CLOUDBACKUP_MYPARAM2Tooltip=My param 2 tooltip
 About = About
 CloudBackupAbout = About CloudBackup
 CloudBackupAboutPage = CloudBackup about page
+
+CLOUDBACKUP_S3_ENDPOINT=S3 Bucket endpoint URL
+CLOUDBACKUP_S3_ENDPOINTTooltip=S3 Bucket URL. Ex: https://test.s3.us-west-004.backblazeb2.com
+CLOUDBACKUP_S3_REGION=S3 region
+CLOUDBACKUP_S3_REGIONTooltip=S3 bucket region. Ex: us-west-002
+CLOUDBACKUP_S3_ACCESS_KEY=S3 Access key
+CLOUDBACKUP_S3_ACCESS_KEYTooltip=S3 Access key
+CLOUDBACKUP_S3_SECRET_KEY=S3 Secret key
+CLOUDBACKUP_S3_SECRET_KEYTooltip=S3 secret key
+CLOUDBACKUP_S3_BUCKET=S3 Bucket name
+CLOUDBACKUP_S3_BUCKETTooltip=Name of the S3 bucket. Ex: test
